# clientplugin

./: .clang-format  .envrc  .gitignore  .gitmodules  CMakeLists.txt  cross-file-32.txt  flake.nix  launch.sh  meson.build  shell.nix  tf2_c.sh  vcpkg.json  x86-linux-mixed.cmake
include/: ccvar.hpp  interfaces.hpp  meson.build  modules.hpp  offsets.hpp  plugin.hpp  sdk-excluded.hpp
include/gum/: interceptor.hpp  objectwrapper.hpp  x86patcher.hpp
include/hook/: attachmenthook.hpp
include/modules/: gfxoverlaymod.hpp  killfeedmod.hpp  modules.hpp  unhidecvars.hpp  videorecordmod.hpp
include/modules/videorecord/: module.hpp  videorecordmod.hpp  x264encoder.hpp
sdk/: meson.build
src/: CMakeLists.txt  ClientPlugin.vdf  clientclasses.cpp  clientclasses.hpp  guifont.hpp  hooks.cpp  interceptor.cpp  interfaces.cpp  interfaces.hpp  main.cpp  meson.build  modules.cpp  offsets.cpp  offsets.hpp  pch.hpp  plugin.cpp  plugin.hpp  profiler.cpp  profiler.hpp  rtti.cpp  rtti.hpp  util.hpp  wrappers.cpp  x264encoder.cpp  x264encoder.hpp
src/gum/: interceptor.cpp  x86patcher.cpp
src/hook/: attachmenthook.hpp  hook.hpp
src/hook/gum/: interceptor.cpp  interceptor.hpp  objectwrapper.hpp  x86patcher.cpp  x86patcher.hpp
src/hooks/: killfeedhook.cpp
src/include/: hooks.hpp  interceptor.hpp  interfaces.hpp  plugin.hpp  sdk.hpp  tfdefs.hpp  wrappers.hpp
src/include/gum/: interceptor.hpp
src/include/hooks/: killfeedhook.hpp
src/include/modules/: killfeedmod.hpp  videorecordmod.hpp
src/modules/: allow_login_nosteam.cpp  cleaverbug.cpp  gfxoverlay.cpp  gfxoverlay.hpp  gfxoverlaymod.cpp  killfeed.cpp  killfeed.hpp  killfeedmod.cpp  mediguns.cpp  mediguns.hpp  modules.cpp  modules.hpp  nav_workshop_fix.cpp  notes.txt  notification.cpp  partychat.cpp  profiler.cpp  profiler.hpp  telemetrystubs.hpp  unhidecvars.cpp  unhidecvars.hpp  unhidecvarsmod.cpp  videorecord.cpp  videorecord.hpp  videorecordmod.cpp
src/modules/videorecord/: module.cpp  module.hpp  videorecordmod.cpp  x264encoder.cpp  x264encoder.hpp
src/offsets/: clientclasses.cpp  clientclasses.hpp  eh_frame.cpp  eh_frame.hpp  offsets.cpp  offsets.hpp  rtti.cpp  rtti.hpp
src/pch/: pch.hpp
src/sdk/: concommandwrapper.hpp  tfdefs.hpp
src/util/: data_range_checker.cpp  data_range_checker.hpp  data_view.hpp  error.hpp  generator.hpp  hexdump.hpp  leb128.cpp  leb128.h  leb128.hpp  loaded_module.cpp  loaded_module.hpp  mmap.cpp  mmap.hpp  timedscope.hpp
subprojects/: .gitignore  frida-gum.wrap  imgui.wrap  source-sdk.wrap  x264.wrap
subprojects/packagefiles/frida-gum/: meson.build
subprojects/packagefiles/source-sdk/: meson.build
subprojects/packagefiles/source-sdk/tier1/: convar.cpp
subprojects/source-sdk/: meson.build
